--- a/src/components/postCard/postCard.module.css
+++ b/src/components/postCard/postCard.module.css
@@ -22,3 +22,19 @@
     font-style: 12px;
     transform: rotate(270deg);
 }
+
+.title{
+    width: 90%;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.desc{
+    width: 90%;
+    margin-bottom: 20px;
+    font-weight: 300;
+    color: gray;
+}
+.link{
+    text-decoration: underline;
+}
