form,blog page main changes

--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -28,7 +28,8 @@
     border: none;
     outline: none;
     border-color: var(--bgSoft);
-    color: var(--text);
+    /* color: var(--text); */
+    color: black;
 }
 
 .form button{
