--- a/src/components/postCard/postCard.module.css
+++ b/src/components/postCard/postCard.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 .top{
@@ -9,7 +10,7 @@
 }
 
 .imgContainer{
-    width: 90px;
+    width: 90%;
     height: 400px;
     position: relative;
 }
@@ -19,7 +20,7 @@
 }
 
 .date{
-    font-style: 12px;
+    font-size: 12px;
     transform: rotate(270deg);
 }
 
