--- a/src/app/blog/[slug]/singlePost.module.css
+++ b/src/app/blog/[slug]/singlePost.module.css
@@ -29,7 +29,7 @@
     font-size: 64px;
 }
 
-.detials{
+.details{
     display: flex;
     gap: 20px;
 }
@@ -51,4 +51,10 @@
 
 .content{
     font-size: 20px;
+}
+
+@media (max-width:768px) {
+    .imgContainer{
+        display: none;
+    }
 }
