--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -51,3 +51,22 @@
 /* .brandImg{}
 
 .heroImg{} */
+
+@media (max-width:1024px) {
+    .container{
+        flex-direction: column;
+        text-align: center;
+    }
+    .buttons{
+        justify-content: center;
+    }
+}
+
+@media (max-width:768px) {
+    .title{
+        font-size: 64px;
+    }
+    .brand{
+        width: 100%;
+    }
+}
