--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -15,3 +15,11 @@
     gap: 30px;
     border-radius: 5px;
 }
+
+.github{
+    padding: 20px;
+    border-radius: 5px;
+    background-color: var(--btn);
+    color: var(--textColor);
+    cursor: pointer;
+}
